--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
-*.class
+#IDEA specific git ignore
+.idea/*
+*.iml
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+*target*
+*.class
 
 # Package Files #
 *.jar
 *.war
 *.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
